# NLPedia

./: .gitignore  README.md
LLM Powered Projects/chainlit_chatbot/: app.py
LLM Powered Projects/project-1/: package.json
LLM Powered Projects/project-1/src/: App.css  App.jsx
LLM Powered Projects/project-1/src/components/NavBar/: Drawer.jsx  navbar.css  navbar.jsx
LLM Powered Projects/project-1/src/pages/: About.jsx  Contact.jsx  Home.jsx
LLM Powered Projects/project-2/api_server/: auth_token.py  main.py  pyproject.toml
References/: readme.md
Research Papers and Literature Reviews/: Readme.md
